; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/extr_hid-roccat-koneplus.c_koneplus_get_actual_profile.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/extr_hid-roccat-koneplus.c_koneplus_get_actual_profile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32 }
%struct.koneplus_actual_profile = type { i32 }

@KONEPLUS_COMMAND_ACTUAL_PROFILE = common dso_local global i32 0, align 4
@KONEPLUS_SIZE_ACTUAL_PROFILE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_device*)* @koneplus_get_actual_profile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @koneplus_get_actual_profile(%struct.usb_device* %0) #0 {
  %2 = alloca %struct.usb_device*, align 8
  %3 = alloca %struct.koneplus_actual_profile, align 4
  %4 = alloca i32, align 4
  store %struct.usb_device* %0, %struct.usb_device** %2, align 8
  %5 = load %struct.usb_device*, %struct.usb_device** %2, align 8
  %6 = load i32, i32* @KONEPLUS_COMMAND_ACTUAL_PROFILE, align 4
  %7 = load i32, i32* @KONEPLUS_SIZE_ACTUAL_PROFILE, align 4
  %8 = call i32 @roccat_common2_receive(%struct.usb_device* %5, i32 %6, %struct.koneplus_actual_profile* %3, i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  br label %16

13:                                               ; preds = %1
  %14 = getelementptr inbounds %struct.koneplus_actual_profile, %struct.koneplus_actual_profile* %3, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  br label %16

16:                                               ; preds = %13, %11
  %17 = phi i32 [ %12, %11 ], [ %15, %13 ]
  ret i32 %17
}

declare dso_local i32 @roccat_common2_receive(%struct.usb_device*, i32, %struct.koneplus_actual_profile*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
